[package]
name = "cl-async"
version = "3.2.6"
edition = "2024"

[features]
default = ["log-warn", "log-error"]
log-info = ["log", "cl-log"]
log-warn = ["log", "cl-log"]
log-error = ["log", "cl-log"]

[dependencies]
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5.14"
crossbeam =  "0.8.4"
num_cpus = "1.16.0"
once_cell = "1.20.3"
log = { version = "0.4.26", features = ["std"], optional = true }
thiserror = "2.0.12"
cl-log = { git = "https://github.com/Liyara/cl-log.git", optional = true }
libc = "0.2.170"
bitflags = "2.9.0"
rustc-hash = "2.1.1"
parking_lot = "0.12.3"
dashmap = "6.1.0"
io-uring = "0.7.4"
enum_dispatch = "0.3.13"
async-channel = "2.3.1"
async-broadcast = "0.7.2"
futures = "0.3.31"
sysctl = "0.6.0"
bytes = "1.10.1"

[[bin]]
name = "cl-async"
path = "src/bin/main.rs"